feat: 更新配置和docker-compose